--- a/style.css
+++ b/style.css
@@ -81,3 +81,18 @@ p {
  color: black;
  font-size: 1.48em;
 }
+
+select {
+  display: block;
+  width: 100%;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
