--- a/style.css
+++ b/style.css
@@ -54,6 +54,13 @@ html {
   font-size: 16px;
 }
 
+body {
+  height: 100%;
+  background: -o-radial-gradient(#FFF,#CCC); /* For Opera 11.6 to 12.0 */
+  background: -moz-radial-gradient(#FFF,#CCC); /* For Firefox 3.6 to 15 */
+  background: radial-gradient(#FFF,#CCC); /* Standard syntax */
+}
+
 main {
  font-size: 62.5%;
  text-align: center;
