--- a/style.css
+++ b/style.css
@@ -54,16 +54,23 @@ html {
   font-size: 16px;
 }
 
+html, body { height: 100%;}
+
 body {
-  height: 100%;
+  width: 100%;
+  display: table;
   background: -o-radial-gradient(#FFF,#CCC); /* For Opera 11.6 to 12.0 */
   background: -moz-radial-gradient(#FFF,#CCC); /* For Firefox 3.6 to 15 */
   background: radial-gradient(#FFF,#CCC); /* Standard syntax */
 }
 
-main {
+
+main.app-container {
  font-size: 62.5%;
  text-align: center;
+ vertical-align: middle;
+ display: table-cell;
+
 }
 
 h1, h2, p {
