UHW-specific updates, changes to structure, images, etc

--- a/styles/style.css
+++ b/styles/style.css
@@ -58,45 +58,73 @@ html, body { height: 100%;}
 
 body {
   width: 100%;
-  display: table;
-  background: -o-radial-gradient(#FFF,#CCC); /* For Opera 11.6 to 12.0 */
-  background: -moz-radial-gradient(#FFF,#CCC); /* For Firefox 3.6 to 15 */
-  background: radial-gradient(#FFF,#CCC); /* Standard syntax */
+  background: #f5f5f5;
 }
 
+.logo {
+    width: 90%;
+    max-width: 960px;
+    text-align: center;
+    margin: 0 auto;
+    background: #fff;
+    background: radial-gradient(circle, rgb(133, 78, 159), rgb(86, 32, 120)) repeat scroll 0% 0% transparent;
+}
+
+.logo figure {
+    display: inline;
+    float: left;
+    margin: 6px 0 0 24px;
+}
+
+.logo img { width: 230px; }
+
+figure {
+    margin: 0 auto;
+    padding: 12px;
+}
 
 main.app-container {
  font-size: 62.5%;
- text-align: center;
- vertical-align: middle;
- display: table-cell;
- padding: 0px 12px;
+    width: 90%;
+    max-width: 960px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 40px 12px;
+    background: #fff;
 
-}
-
-h1, h2, p {
-  line-height: 1.5em;
-}
-
-h1 {
- font-size: 2.63em;
-  font-weight: bold;
- color: #6d6370;
-}
-
-h2 {
- font-family: Helvetica, sans-serif;
- color: #6d6370;
- font-size: 1.973em;
- font-weight: bold;
- margin-top: 24px;
 }
 
 p {
- color: black;
- font-size: 1.48em;
+    font-family: Arial,sans-serif;
+    font-size: 1.6em;
+    margin: 12px 0 12px 0;
+    line-height: 20px;
 }
 
+b, strong { font-weight: bold; }
+
+h1, h2, h3 {
+    font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,Tahoma,sans-serif;
+}
+
+h1 {
+    font-size: 2.8em;
+    line-height: 30px;
+    font-weight: bold;
+}
+h2 {
+    font-size: 1.7em;
+    line-height: 20px;
+}
+h3 {
+    font-size: 1.1em;
+    letter-spacing: 0.05em;
+    line-height: 11px;
+    margin-bottom: 7px;
+    color: #777;
+    text-transform: uppercase;
+    font-weight: normal;
+}
 select {
   display: block;
   width: 100%;
@@ -111,7 +139,7 @@ select {
   margin-bottom: 10px;
 }
 
-#emailForm {
+#social-buttons, #emailForm {
   display: none;
 }
 
@@ -119,8 +147,28 @@ select {
  text-align: left;
 }
 
-@media (min-width: 768px) {
+/* CLEARFIX */
+
+.group:after {
+     content: "";
+     display: table;
+     clear: both;
+}
+
+@media screen and (min-width: 768px) {
  .form-signin {
   min-width: 500px;
  }
 }
+
+ @media screen and (max-width: 500px) {
+
+     img {
+         width: 100% !important;
+         height: auto !important;
+     }
+
+     .logo img {
+        width: 90%;
+     }
+ }
