Requested changes from UHW

--- a/styles/signup.css
+++ b/styles/signup.css
@@ -7,7 +7,7 @@
 .form-signin .checkbox {
   margin-bottom: 10px;
 }
-.form-signin p {
+.form-signin h2 {
   padding: 6px 0px;
 }
 .form-signin .checkbox {
