--- a/styles/style.css
+++ b/styles/style.css
@@ -109,17 +109,17 @@ h1, h2, h3 {
 
 h1 {
     font-size: 2.8em;
-    line-height: 30px;
+    line-height: 2em;
     font-weight: bold;
 }
 h2 {
     font-size: 1.7em;
-    line-height: 20px;
+    line-height: 2em;
 }
 h3 {
     font-size: 1.1em;
     letter-spacing: 0.05em;
-    line-height: 11px;
+    line-height: 1.5em;
     margin-bottom: 7px;
     color: #777;
     text-transform: uppercase;
