--- a/styles/style.css
+++ b/styles/style.css
@@ -67,16 +67,11 @@ body {
     text-align: center;
     margin: 0 auto;
     background: #fff;
-    background: radial-gradient(circle, rgb(133, 78, 159), rgb(86, 32, 120)) repeat scroll 0% 0% transparent;
 }
 
 .logo figure {
-    display: inline;
-    float: left;
-    margin: 6px 0 0 24px;
+    padding: 12px 0;
 }
-
-.logo img { width: 230px; }
 
 figure {
     margin: 0 auto;
@@ -109,12 +104,12 @@ h1, h2, h3 {
 
 h1 {
     font-size: 2.8em;
-    line-height: 2em;
+    line-height: 1.2em;
     font-weight: bold;
 }
 h2 {
     font-size: 1.7em;
-    line-height: 2em;
+    line-height: 1.2em;
 }
 h3 {
     font-size: 1.1em;
