Social media links functional, click-tracking, updated styles

--- a/sass/stories.scss
+++ b/sass/stories.scss
@@ -1,6 +1,6 @@
 @import 'reset';
 
-$image-proportion: 400px;
+$image-proportion: 350px;
 $base-color: #562078;
 $secondary-color: #714e9f;
 $base-font: 1.6em;
@@ -11,9 +11,15 @@ html {
   font-size: 16px;
 }
 
+body {
+ background-color: #f5f5f5;
+}
 
 #app-container {
  font-size: 62.5%;
+ background-color: #fff;
+ padding-right: 0px;
+ padding-left: 0px;
 }
 
 header {
@@ -26,8 +32,6 @@ header {
     width: 230px;
   }
 }
-
-.row { margin-bottom: 24px; }
 
 p {
   font-size: $base-font;
@@ -81,18 +85,20 @@ p {
 }
 
 .social-share {
-  width: 400px;
+  width: $image-proportion;
   margin:0 auto;
 }
 
 .facebook, .twitter {
-  width: 200px;
+  width: $image-proportion/2;
   height: 50px;
   text-align: center;
-  font-size: $base-font*5/6;
+  font-size: $base-font*4/5;
   font-weight: bold;
   color:#fff;
   padding:17px;
+  cursor: pointer;
+  margin-bottom: 24px;
 }
 
 .facebook {
@@ -117,4 +123,10 @@ p {
   .container {
     width: 940px;
   }
+}
+
+@media (max-width: 400px) {
+
+  header { text-align: center; }
+
 }
