--- a/styles/stories.css
+++ b/styles/stories.css
@@ -49,8 +49,14 @@ html {
   font-family: "Gotham Black", Arial, sans-serif;
   font-size: 16px; }
 
+body {
+  background-color: #f5f5f5; }
+
 #app-container {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  background-color: #fff;
+  padding-right: 0px;
+  padding-left: 0px; }
 
 header {
   max-width: 940px;
@@ -61,16 +67,13 @@ header {
     margin: 12px 0 24px 24px;
     width: 230px; }
 
-.row {
-  margin-bottom: 24px; }
-
 p {
   font-size: 1.6em;
   line-height: 1.5em; }
 
 .story-image {
-  height: 400px;
-  width: 400px;
+  height: 350px;
+  width: 350px;
   padding: 12px;
   position: relative;
   margin: 0 auto; }
@@ -82,38 +85,40 @@ p {
     opacity: 0.90;
     position: absolute;
     bottom: 12px;
-    width: 375px; }
+    width: 325px; }
 
 #story-image-1 {
   background: url("../images/story-images.jpg") 0px 0px; }
 
 #story-image-2 {
-  background: url("../images/story-images.jpg")-400px 0px; }
+  background: url("../images/story-images.jpg")-350px 0px; }
 
 #story-image-3 {
-  background: url("../images/story-images.jpg")-800px 0px; }
+  background: url("../images/story-images.jpg")-700px 0px; }
 
 #story-image-4 {
-  background: url("../images/story-images.jpg") 0px -400px; }
+  background: url("../images/story-images.jpg") 0px -350px; }
 
 #story-image-5 {
-  background: url("../images/story-images.jpg") -400px -400px; }
+  background: url("../images/story-images.jpg") -350px -350px; }
 
 #story-image-6 {
-  background: url("../images/story-images.jpg") -800px -400px; }
+  background: url("../images/story-images.jpg") -700px -350px; }
 
 .social-share {
-  width: 400px;
+  width: 350px;
   margin: 0 auto; }
 
 .facebook, .twitter {
-  width: 200px;
+  width: 175px;
   height: 50px;
   text-align: center;
-  font-size: 1.33333em;
+  font-size: 1.28em;
   font-weight: bold;
   color: #fff;
-  padding: 17px; }
+  padding: 17px;
+  cursor: pointer;
+  margin-bottom: 24px; }
 
 .facebook {
   background-color: #391550;
@@ -132,5 +137,8 @@ p {
 @media (min-width: 1200px) {
   .container {
     width: 940px; } }
+@media (max-width: 400px) {
+  header {
+    text-align: center; } }
 
 /*# sourceMappingURL=stories.css.map */
