--- a/styles/stories.css
+++ b/styles/stories.css
@@ -71,6 +71,10 @@ p {
   font-size: 1.6em;
   line-height: 1.5em; }
 
+a, a:hover, a:visited, a:focus {
+  text-decoration: none;
+  color: #fff; }
+
 .story-image {
   height: 350px;
   width: 350px;
